# Rail-Autonomy

./: README.md
perception_stack/launch/: Example_perception_stack.launch.py  perception_stack.launch.py
perception_stack/nodes/: camera_node.py  f_detr_inference.py  lidar_node.py  segnet_inference.py
src/perception_stack/: package.xml
